<resources>
    <string name="app_name">MVVMLogin</string>

    <!--Login-->
    <string name="login_welcome_message">Bem-vindo</string>
    <string name="login_register_message">Registro</string>
    <string name="login_usename_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in">Entrar</string>
    <string name="login_create_account">Criar uma conta</string>
    <string name="login_go_register">Pronto</string>

    <!--Main-->
    <string name="main_title">Informaçao do Usuario</string>
    <string name="main_first_name_hint">Nome</string>
    <string name="main_last_name_hint">Sobrenome</string>
    <string name="main_password_hint">Senha</string>
    <string name="main_save_changues">Guardar cambios</string>

    <string name="error_message">Ocorreu um erro inesperado</string>

    <string name="menu_action_logout">Sair</string>
</resources>
